--- a/platforms/android/res/xml/config.xml
+++ b/platforms/android/res/xml/config.xml
@@ -7,12 +7,12 @@
     <feature name="BarcodeScanner">
         <param name="android-package" value="com.phonegap.plugins.barcodescanner.BarcodeScanner" />
     </feature>
-    <name>BarCodeScanner</name>
+    <name>Aries Scanner</name>
     <description>
-        A sample Apache Cordova application that responds to the deviceready event.
+       A scanner for Aries personal assistant
     </description>
-    <author email="dev@cordova.apache.org" href="http://cordova.io">
-        Apache Cordova Team
+    <author email="abhimanu29@gmail.com" href="https://github.com/abhisheknigam/Aries">
+        Modified by Aries Team. Apache Cordova Team
     </author>
     <content src="index.html" />
     <access origin="*" />
